--- a/style.css
+++ b/style.css
@@ -17,6 +17,28 @@
   fill: var(--button-secondary-text-color-hover);
 }
 
+#Simple-Setting-Button {
+  top: 0;
+  padding: 0;
+  position: absolute;
+  z-index: 9999;
+  box-shadow: 0 0 0 1.5px var(--button-secondary-text-color);
+  transition: 0.4s ease;
+}
+
+#Simple-Setting-Button:hover {
+  box-shadow: 0 0 0 1.5px var(--button-secondary-text-color-hover);
+}
+
+#Simple-Setting-Button svg {
+  transition: 0.4s ease;
+  fill: var(--button-secondary-text-color);
+}
+
+#Simple-Setting-Button svg:hover {
+  fill: var(--button-secondary-text-color-hover);
+}
+
 #Simple-R-Box {
   position: absolute;
   width: 11.4rem;
@@ -55,7 +77,6 @@
 
 #setting_simple_dimension_preset_doc details .code_wrap {
   box-shadow: 0 0 0 1.5px var(--body-text-color);
-  width: 50%;
   filter: brightness(0.7);
   border-radius: 10px;
   border: 0.1px solid transparent;
